@@ -15,11 +15,13 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
 
-import java.awt.print.Pageable;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+
+//@RequestMapping("/WEB-INF/views/")
 
 @Controller
 @Data
@@ -36,6 +38,7 @@ public class WebController {
         mVoteProxy = pVoteProxy;
     }
 
+
     @GetMapping(path = {"/", "/index", "/index.html"})
     public String index(@RequestParam(required = false, defaultValue = "0") Integer page, Model model) {
         fillModelWithPaginationAttributes(model, page);
@@ -49,10 +52,11 @@ public class WebController {
         return "index :: all-projets";
     }
 
-    @GetMapping(path = "/fragments/projets/{id}")
-    public String fragmentProjet(@PathVariable Long id, Model model) {
+    @GetMapping(path = "/fragments/projets/{idProjet}")
+    public String fragmentProjet(@PathVariable Long idProjet, Model model) {
         Optional<Projet> projet = mProjetProxy.findByIdProjet(idProjet);
-        model.addAttribute("projet", projet.get());
+        model.addAttribute("projet",
+                projet.get());
         return "fragment-projet :: single-projet";
     }
 
@@ -66,12 +70,27 @@ public class WebController {
     }
 
     private List<Projet> getProjets(int page) {
-        Pageable pageable = (Pageable) PageRequest.of(page, DEFAULT_PAGE_COUNT, Sort.by("closLe").ascending());
-        Page<Projet> all = mProjetProxy.findAll((org.springframework.data.domain.Pageable) pageable);
-        List<Projet> openProjets = all.filter(projet -> projet.getClosLe().isAfter(LocalDateTime.now())).stream().collect(Collectors.toList());
-        List<Projet> closedProjets = all.filter(projet -> projet.getClosLe().isBefore(LocalDateTime.now())).stream().collect(Collectors.toList());
-        openProjets.addAll(closedProjets);
-        return openProjets;
+        try {
+            PageRequest pageable = PageRequest.of(page, DEFAULT_PAGE_COUNT, Sort.by("closLe").ascending());
+            Page<Projet> all = mProjetProxy.findAll(pageable);
+
+            if (all != null) {
+                List<Projet> openProjets = all.filter(projet -> projet.getClosLe().isAfter(LocalDateTime.now()))
+                        .stream().collect(Collectors.toList());
+                List<Projet> closedProjets = all.filter(projet -> projet.getClosLe().isBefore(LocalDateTime.now()))
+                        .stream().toList();
+                openProjets.addAll(closedProjets);
+                return openProjets;
+            } else {
+                // Traitement lorsque 'all' est null (ex: pas de projets trouvés)
+                return Collections.emptyList(); // Retourner une liste vide
+            }
+        } catch (NullPointerException e) {
+            // Gérer l'exception NullPointerException
+            e.printStackTrace(); // Afficher la trace de l'exception (facultatif)
+            return Collections.emptyList(); // Retourner une liste vide en cas d'exception
+        }
     }
+
 }
 
